src/styles/pages/Home.module.css
.container {
    height: 100vh;
    max-width: 992px;
    margin: 0 auto;
  
    display: flex;
    flex-direction: column;
    background: var(--background-component);

}
.container .wrap {
    padding: 0 1.4rem;
}
.container section {
    flex: 1;
    display: grid;

    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); 
    
    gap: 3.25rem;
    align-content: center;
    margin-bottom: 20px;
}


@media(max-width: 420px) {
    .container {                    
        padding: 0.5rem;   
        height: auto;
    } 
    .container section{        
        gap: 1.25rem;  
        flex:none;     
    } 
}
  
  

